--- a/index.html
+++ b/index.html
@@ -24,24 +24,57 @@
             em nossa comunidade
           </h3>
           <button class="conteudo-principal-escrito-botao">
-            Quero Participar
+            QUERO PARTICIPAR
           </button>
         </div>
         <img src="./img/Video.png" alt="" class="conteudo-principal-imagem" />
       </section>
 
       <section class="conteudo-secundario">
-        <img src="./img/Icon.png" alt="" class="conteudo-secundario-imagem" />
-        <p class="conteudo-secundario-texto">Relacionameto</p>
+        <h3 class="conteudo-secundario-titulo">
+          PRINCIPAIS ASSUNTOS ABORDADOS
+        </h3>
 
-        <img src="./img/Icon.png" alt="" class="conteudo-secundario-imagem" />
-        <p class="conteudo-secundario-texto">Sabedoria</p>
+        <div class="conteudo-secundario-logos">
+          <div class="conteudo-secundario-logo">
+            <img
+              src="./img/Icon.png"
+              alt=""
+              class="conteudo-secundario-imagem"
+            />
+            <br />
+            <p class="conteudo-secundario-texto">RELACIONAMENTO</p>
+          </div>
+          <div class="conteudo-secundario-logo-2">
+            <img
+              src="./img/Icon.png"
+              alt=""
+              class="conteudo-secundario-imagem-2"
+            />
+            <br />
+            <p class="conteudo-secundario-texto-2">SABEDORIA</p>
+          </div>
 
-        <img src="./img/Icon.png" alt="" class="conteudo-secundario-imagem" />
-        <p class="conteudo-secundario-texto">Amor</p>
+          <div class="conteudo-secundario-logo-3">
+            <img
+              src="./img/Icon.png"
+              alt=""
+              class="conteudo-secundario-imagem-3"
+            />
+            <br />
+            <p class="conteudo-secundario-texto-3">Amor</p>
+          </div>
 
-        <img src="./img/Icon.png" alt="" class="conteudo-secundario-imagem" />
-        <p class="conteudo-secundario-texto">Amizade</p>
+          <div class="conteudo-secundario-logo-4">
+            <img
+              src="./img/Icon.png"
+              alt=""
+              class="conteudo-secundario-imagem-4"
+            />
+            <br />
+            <p class="conteudo-secundario-texto-4">Amizade</p>
+          </div>
+        </div>
       </section>
 
       <section class="conteudo-terceiro">
