--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <br />
             <p class="conteudo-secundario-texto">RELACIONAMENTO</p>
           </div>
+
           <div class="conteudo-secundario-logo-2">
             <img
               src="./img/Icon.png"
@@ -62,7 +63,7 @@
               class="conteudo-secundario-imagem-3"
             />
             <br />
-            <p class="conteudo-secundario-texto-3">Amor</p>
+            <p class="conteudo-secundario-texto-3">AMOR</p>
           </div>
 
           <div class="conteudo-secundario-logo-4">
@@ -72,18 +73,21 @@
               class="conteudo-secundario-imagem-4"
             />
             <br />
-            <p class="conteudo-secundario-texto-4">Amizade</p>
+            <p class="conteudo-secundario-texto-4">AMIZADE</p>
           </div>
         </div>
       </section>
 
       <section class="conteudo-terceiro">
+        <div class="back"></div>
+
         <h3 class="conteudo-terceiro-titulo">
-          UMA COMUNIDADE SOBRE RELACIONAMENTO AMOROSO...
+          UMA COMUNIDADE SOBRE <br />
+          RELACIONAMENTO AMOROSO...
         </h3>
         <p class="conteudo-terceiro-texto">
-          Ensinamentos para você recomquistar o seu amor. Pra você que é
-          acanhado(a)...
+          Ensinamentos para você recomquistar o seu amor. <br />
+          Pra você que é acanhado(a)...
         </p>
         <button class="conteudo-terceiro-botao">QUERO FAZER PARTE</button>
       </section>
