--- a/index.html
+++ b/index.html
@@ -94,19 +94,24 @@
 
       <section class="conteudo-quarto">
         <h3 class="conteudo-quarto-titulo">
-          RECEBA NOSSOS MATERIAIS EDUCATIVOS GRATUITAMENTE EM SEU EMAIL
+          RECEBA NOSSOS MATERIAIS EDUCATIVOS <br />
+          GRATUITAMENTE EM SEU EMAIL
         </h3>
 
         <form action="" class="conteudo-quarto-formulario">
-          <input type="text" placeholder="SEU NOME" />
-          <input type="text" placeholder="SEU EMAIL" />
-          <button>QUERO RECEBER</button>
+          <input type="text" placeholder=" SEU NOME" class="fom-um" /><br />
+          <br />
+
+          <input type="text" placeholder=" SEU EMAIL" class="fom-dois" /><br />
+          <br />
+          <button class="quarto-botao">QUERO RECEBER</button>
         </form>
       </section>
     </main>
 
     <footer class="rodape">
-      <p class="rodape-texto">nossas redes sociais</p>
+      <p class="rodape-texto">NOSSAS REDES SOCIAIS</p>
+
       <img src="./img/Social.png" alt="" class="rodape-icon" />
       <img src="./img/Social (2).png" alt="" class="rodape-icon" />
       <img src="./img/Social (1).png" alt="" class="rodape-icon" />
